charts/all/medical-diagnosis/image-server/templates/image-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-server
  namespace: xraylab-1
  annotations:
    argocd.argoproj.io/sync-wave: "15"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    name: image-server
