charts/all/medical-diagnosis/image-server/templates/image-server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: image-server
  namespace: xraylab-1
  annotations:
    argocd.argoproj.io/sync-wave: "17"
spec:
  to:
    kind: Service
    name: image-server
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
  wildcardPolicy: None
